# tree-sitter-sql

./: .gitignore  Cargo.toml  grammar.js
src/: grammar.json  node-types.json
test/corpus/: alter_procedure.txt  bracket_quoted.txt  errors.txt  execute.txt  go.txt  procedures.txt
