[package]
name = "tree-sitter-sequel-tsql"
description = "Tree-sitter Grammar for SQL with T-SQL extensions (CREATE PROCEDURE, GO, EXEC)"
version = "0.4.0"
authors = ["derek stride", "jamie8johnson"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "sql"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/jamie8johnson/tree-sitter-sql.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["/LICENSE", "bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "~1.2.1"

[dev-dependencies]
tree-sitter = "~0.25.0"
